--- a/packages/docker_debian10_xorg/Dockerfile
+++ b/packages/docker_debian10_xorg/Dockerfile
@@ -1,7 +1,7 @@
 FROM docker_debian10_vulkan:latest
 
-COPY . /docker_debian10_vulkan
+COPY . /docker_debian10_xorg
 
-RUN /bin/bash /docker_debian10_vulkan/build.sh
+RUN /bin/bash /docker_debian10_xorg/build.sh
 
 
