--- a/packages/docker_debian10_angle/Dockerfile
+++ b/packages/docker_debian10_angle/Dockerfile
@@ -2,7 +2,7 @@ FROM docker_debian10_xorg:latest
 
 COPY . /docker_debian10_angle
 ENV my_http_proxy ${my_http_proxy}
-
+RUN env
 
 RUN /bin/bash /docker_debian10_angle/build.sh
 
