--- a/packages/docker_build_arg/Dockerfile
+++ b/packages/docker_build_arg/Dockerfile
@@ -1,11 +1,10 @@
 FROM debian:10
 
 COPY . /docker_debian10_angle
-RUN echo "start"
 RUN env
-RUN echo "end"
 ARG MY_HTTP_PROXY
-RUN echo $MY_HTTP_PROXY
+ENV MY_HTTP_PROXY=$MY_HTTP_PROXY
+RUN env
 RUN /bin/bash /docker_debian10_angle/build.sh
 
 
